add_library(
    link
STATIC
    abstractlink.cpp
    filelink.cpp
    link.cpp
    linkconfiguration.cpp
    logsensorstruct.cpp
    ping1dsimulationlink.cpp
    ping360simulationlink.cpp
    processlog.cpp
    sensorinfo.cpp
    seriallink.cpp
    simulationlink.cpp
    tcplink.cpp
    udplink.cpp
    abstractlinknamespace.h
)

target_link_libraries(
    link
PRIVATE
    Qt6::Core
    Qt6::Network
    Qt6::SerialPort
    Qt6::Gui
)
